--- a/Flagrum.Web/Features/ModLibrary/Components/ModListingCard.razor
+++ b/Flagrum.Web/Features/ModLibrary/Components/ModListingCard.razor
@@ -1,5 +1,4 @@
-﻿@using Flagrum.Core.Archive.Binmod
-@inject NavigationManager Navigation
+﻿@inject NavigationManager Navigation
 @inject Settings Settings
 @inject JSInterop Interop
 @inject AppStateService AppState
