--- a/Flagrum.Web/Features/ModLibrary/Configure.razor
+++ b/Flagrum.Web/Features/ModLibrary/Configure.razor
@@ -1,16 +1,19 @@
 ﻿@page "/mod/configure"
 @using Flagrum.Core.Utilities
 @using Flagrum.Web.Components.Controls.Data
-@using Flagrum.Core.Archive.Binmod
-@using Flagrum.Core.Gfxbin.Btex
 @using System.IO
 @using Flagrum.Core.Archive
+@using Flagrum.Core.Gfxbin.Btex
 
 @inject NavigationManager Navigation
 @inject JSInterop Interop
 @inject Settings Settings
 @inject AppStateService AppState
 @inject ILogger<Configure> Logger
+@inject BinmodTypeHelper BinmodTypeHelper
+@inject ModelReplacementPresets ReplacementPresets
+@inject BinmodBuilder BinmodBuilder
+@inject Modmeta Modmeta
 
 <CascadingValue Value="this">
     <LoadingView Text="@LoadingText"
@@ -315,12 +318,10 @@
 
             if (ImageHasChanged)
             {
-                var tempFile = Path.GetTempFileName();
-                var tempFile2 = Path.GetTempFileName();
                 var png = Convert.FromBase64String(PreviewBase64);
-                File.WriteAllBytes(tempFile, png);
-                BtexConverter.Convert(Settings.BTexConverterPath, tempFile, tempFile2, BtexConverter.TextureType.Color);
-                var btex = File.ReadAllBytes(tempFile2);
+
+                var converter = new TextureConverter();
+                var btex = converter.Convert("$preview", "png", TextureType.Color, png);
 
                 packer.UpdateFile("preview.png.bin", png);
                 packer.UpdateFile("preview.btex", btex);
@@ -339,9 +340,9 @@
         await Task.Run(() =>
         {
             Mod.ModelExtension = "gmdl";
-            var builder = new BinmodBuilder(Settings.BTexConverterPath, Mod, Convert.FromBase64String(PreviewBase64));
-            builder.AddFmd(Settings.BTexConverterPath, ModelData);
-            builder.WriteToFile(Mod.Path);
+            BinmodBuilder.Initialise(Mod, Convert.FromBase64String(PreviewBase64));
+            BinmodBuilder.AddFmd(ModelData);
+            BinmodBuilder.WriteToFile(Mod.Path);
 
             if (AppState.ActiveMod == null)
             {
@@ -373,7 +374,7 @@
     {
         if (Mod.Type == (int)BinmodType.Character)
         {
-            Mod.OriginalGmdls = ModelReplacementPresets.GetOriginalGmdls(newTarget).ToList();
+            Mod.OriginalGmdls = ReplacementPresets.GetOriginalGmdls(newTarget).ToList();
         }
     }
 }
