--- a/Flagrum.Web/Features/ModLibrary/Stats/Replacement.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Replacement.razor
@@ -4,7 +4,7 @@
             <table class="w-full right-align-all-labels">
                 <tr>
                     <td>
-                        <label>TITLE</label>
+                        <label>MOD TITLE</label>
                     </td>
                     <td colspan="7" class="pl-4">
                         <Textbox Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.WorkshopTitle"/>
@@ -12,10 +12,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <label>DESCRIPTION</label>
+                        <label>MOD DESCRIPTION</label>
                     </td>
                     <td colspan="7" class="pl-4">
-                        <Textbox Rows="3" Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.Description"/>
+                        <Textbox Rows="5" Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.Description"/>
                     </td>
                 </tr>
             </table>
