--- a/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
@@ -1,13 +1,11 @@
 ﻿@using Flagrum.Web.Features.ModLibrary.Data
-@using Microsoft.AspNetCore.Components
-
 <div class="box mt-4">
     <EditForm Model="WeaponStats">
         <div class="p-4">
             <table class="w-full right-align-all-labels">
                 <tr>
                     <td>
-                        <label>IN-GAME TITLE</label>
+                        <label>MOD TITLE</label>
                     </td>
                     <td colspan="7" class="pl-4">
                         <Textbox Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.GameMenuTitle"/>
@@ -15,10 +13,26 @@
                 </tr>
                 <tr>
                     <td>
-                        <label>DESCRIPTION</label>
+                        <label>MOD DESCRIPTION</label>
                     </td>
                     <td colspan="7" class="pl-4">
                         <Textbox Rows="3" Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.Description"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>GEAR MENU TITLE</label>
+                    </td>
+                    <td colspan="7" class="pl-4">
+                        <Textbox Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.GameMenuTitle"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label>GEAR MENU DESCRIPTION</label>
+                    </td>
+                    <td colspan="7" class="pl-4">
+                        <Textbox Rows="3" Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.GameMenuDescription"/>
                     </td>
                 </tr>
                 <tr>
@@ -124,7 +138,7 @@
 {
     [CascadingParameter]
     public Configure Parent { get; set; }
-    
+
     private WeaponStatsModel WeaponStats { get; set; }
 
     protected override void OnInitialized()
@@ -138,13 +152,13 @@
                 + (WeaponStats.Vitality ?? 0) * 0.2
                 + (WeaponStats.Magic ?? 0) * 0.2
                 + (WeaponStats.Spirit ?? 0) * 0.2
-                + WeaponStats.Fire ?? 0
-                + WeaponStats.Ice ?? 0
-                + WeaponStats.Thunder ?? 0
-                + WeaponStats.Dark ?? 0
-                + WeaponStats.Ballistic ?? 0
-                + WeaponStats.Attack ?? 0
-                + WeaponStats.Critical ?? 0);
+                + (WeaponStats.Fire ?? 0)
+                + (WeaponStats.Ice ?? 0)
+                + (WeaponStats.Thunder ?? 0)
+                + (WeaponStats.Dark ?? 0)
+                + (WeaponStats.Ballistic ?? 0)
+                + (WeaponStats.Attack ?? 0)
+                + (WeaponStats.Critical ?? 0));
             StateHasChanged();
         });
     }
